--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3f95f4dc90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59a850f890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f95fc3ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3f95fc3cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f59a81d4bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f59a81d4dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f96568450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3f96568650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f59a8782610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f59a8782810&gt;]</pre>
 </div>
 
 </div>
