--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad2928f750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f27bfc49150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fad292d9d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fad292d9f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f27bf5f3f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f27bfbd71d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fad298cd890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fad29880850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f27bfbae950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f27bfbaeb50&gt;]</pre>
 </div>
 
 </div>
