--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f35cae5e0d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f12b131fc50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35caac0e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35cb08c0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12b0f8dcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12b0f8ded0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35cb066790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35cb0669d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12b15346d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12b15348d0&gt;]</pre>
 </div>
 
 </div>
