--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5bbbf27d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f233ce4e490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bbbf6cd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5bbbf6cf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f233d437ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f233d443fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bbc513690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5bbc513890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f233d9de790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f233d9ea8d0&gt;]</pre>
 </div>
 
 </div>
