--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f68cb6a3b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf973eab50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68cb36ddd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68cb36dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf97141ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf97141cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68cb915610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68cb915810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf976e6410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf976e6610&gt;]</pre>
 </div>
 
 </div>
