--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f87c6399410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e962a2ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f87c6410b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f87c6410d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e957e65d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7e954acfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f87c69b13d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f87c69b15d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e95a50790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7e95a50990&gt;]</pre>
 </div>
 
 </div>
