--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f399ae27a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1fac54edd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f399adbe0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f399adbe2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fac866e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1face31050&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f399ad95990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f399ad95b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1face0a7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1face0a9d0&gt;]</pre>
 </div>
 
 </div>
