--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34cd5fa290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42caea8f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34cd29f950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34cd29fb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42cab48ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42cab48cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34cd8702d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34cd8704d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42cb11d3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42cb11d5d0&gt;]</pre>
 </div>
 
 </div>
