--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f309a0e4f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f667415fc50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3099a8fe90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f309a0720d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6673ad8c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6673ad8e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f309a04c810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f309a04ca10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6674088590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6674088790&gt;]</pre>
 </div>
 
 </div>
