--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f667415fc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f166cc807d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6673ad8c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6673ad8e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f166c938b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f166c938d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6674088590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6674088790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f166cedc550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f166cedc750&gt;]</pre>
 </div>
 
 </div>
