--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe541a50450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f29cea5ce10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe54141de10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe54141dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29cdc43b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29cdc43d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5419c1710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5419c1910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29ce1e4450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29ce1e4650&gt;]</pre>
 </div>
 
 </div>
