--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f52d4b64e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa7216e90d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52d3d4bb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52d3d4bd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa721cc6250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa721cdde50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52d42ed510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52d42ed710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa722279250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa722284750&gt;]</pre>
 </div>
 
 </div>
