--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e6b5edb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54a2b6c290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e6ba18b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e6ba18d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54a2e9fd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54a2e9ff90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e6bfba510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e6bfba710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54a344f690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54a344f8d0&gt;]</pre>
 </div>
 
 </div>
