--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54a2b6c290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21d1dc2210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54a2e9fd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54a2e9ff90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21d1a32fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21d200b210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54a344f690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54a344f8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21d1fe3950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21d1fe3b50&gt;]</pre>
 </div>
 
 </div>
