--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff9ddd42510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd9b2b77e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9dd69e9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff9dd6c9f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9b1d48cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9b1d5fe10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9ddc67310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff9ddc72850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9b22ff510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9b22f4590&gt;]</pre>
 </div>
 
 </div>
