--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ee9464890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f253de094d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ee8592c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ee8592e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f253e229c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f253e229e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ee8b395d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ee8b397d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f253e822550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f253e7d5710&gt;]</pre>
 </div>
 
 </div>
