--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1015efcc90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7404637390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1016322bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1016322dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74042b2a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74042b2c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f10168c9510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f10168c9710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f740485a390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f740485a590&gt;]</pre>
 </div>
 
 </div>
