--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faf37534a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa14aa85510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faf375a5c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faf375a5e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa14a720050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa14a757cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faf37b4c590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faf37b4c790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa14acdf910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa14acfb5d0&gt;]</pre>
 </div>
 
 </div>
