--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1bd9719690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae98561b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1bd9780b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1bd9780d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae97f1ad50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae97f1af50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1bd9d26450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1bd9d26650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae984bd5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae984bd7d0&gt;]</pre>
 </div>
 
 </div>
