--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa948596d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a1b6bcd10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa947eeba10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa947eebc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a1bae1c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a1bae1e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa94850c850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9484bf610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a1c088610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a1c088810&gt;]</pre>
 </div>
 
 </div>
