--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7293604190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff387937cd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72932bd8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72932d3c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff387d33a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff387d33c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72938690d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7293875510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff388304390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff388304590&gt;]</pre>
 </div>
 
 </div>
