--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21c9b88d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56a0cbf1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21c98abe90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21c9e780d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56a0fc4d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56a0fc4f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21c9e52790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21c9e52990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56a1573610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56a1573810&gt;]</pre>
 </div>
 
 </div>
