--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc444493dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f29aafb2b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4435c5c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc4435c5e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29ab3c71d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29ab3d7e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc443b685d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc443b687d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29ab9742d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29ab97f750&gt;]</pre>
 </div>
 
 </div>
