--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3aa2d78f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbff0e35050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3aa2730b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3aa2730d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbff1143d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbff1143f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3aa2cd2490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3aa2cd2690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbff16ea750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbff16ea950&gt;]</pre>
 </div>
 
 </div>
