--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f80de418d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21941c0590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f80de120e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f80de715290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2193eaec10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2193eaee50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f80de6e67d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f80de6eebd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2194453550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2194453790&gt;]</pre>
 </div>
 
 </div>
