--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa6867aed90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f376ae25110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa680378d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa680378f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f376aab1f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f376aab41d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa680943650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa680943850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f376b065850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f376b065a50&gt;]</pre>
 </div>
 
 </div>
