--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff545c7b350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1965193750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff545973810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff545973990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1964e4ded0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1964e80110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff545f196d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff545f198d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1965419850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1965419a50&gt;]</pre>
 </div>
 
 </div>
