--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd94f52be90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fea7ba72c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd94f1e9090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd94f1e9290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fea7b727f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fea7b759150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd94f799990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd94f799b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fea7bcf2810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fea7bcf2a10&gt;]</pre>
 </div>
 
 </div>
