--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fedca03f990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d08bf53d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fedc9d17c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fedc9d17e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d0891d910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d088d50d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fedca2e05d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fedca2e07d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d08e74910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d08e74b10&gt;]</pre>
 </div>
 
 </div>
