--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa6b219b6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2a87565290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6b1e1cf90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa6b1e231d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a87244110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2a87244310&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6b23cf890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa6b23cfa90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a877f4a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2a877f4c50&gt;]</pre>
 </div>
 
 </div>
