--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f12affed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f935e584f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f127aafd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f124ef310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f935e255f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f935e273190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f12dcbe90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f12d73a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f935e822810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f935e822a10&gt;]</pre>
 </div>
 
 </div>
