--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f04f0386350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f12c36e7650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f04f0069590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f04f00697d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12c33b5e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12c33d3090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f04f0611710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f04f0611910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12c39827d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12c39829d0&gt;]</pre>
 </div>
 
 </div>
