--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2172a88790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc3c0d470d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21724b5690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2172777110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3c0a21f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc3c0a21490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2172d7dd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2172d25a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3c0fc9710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc3c0fc9910&gt;]</pre>
 </div>
 
 </div>
