--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7cf386a510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5e7858b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cf2a4ef50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7cf2a34190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5e7514e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe5e7514fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cf2fe28d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7cf2fe2ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5e7ab0790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe5e7ab0990&gt;]</pre>
 </div>
 
 </div>
