--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5e7858b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07d57edb10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5e7514e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5e7514fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07d54a3d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07d54a3f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5e7ab0790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5e7ab0990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07d5a6e750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07d5a6e990&gt;]</pre>
 </div>
 
 </div>
