--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7fdd06f8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc3642b81d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fdcd49f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7fdcd5b190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc363f8cdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc363f8cfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fdd308850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7fdd308a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc364556790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc364556990&gt;]</pre>
 </div>
 
 </div>
