--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9419692590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc785dd690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f94190339d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f94190335d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc78a1ab10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc78a1ae10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f94195d13d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f94195d15d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc78faa2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc78faa510&gt;]</pre>
 </div>
 
 </div>
