--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd942a09550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4295f7f790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd942d04950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd942d073d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4295f50810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4295f50c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd943313310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd94329d5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42964fd410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42964fd610&gt;]</pre>
 </div>
 
 </div>
